# Time-and-TimeSpan

./: .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md
src/libtime/: CMakeLists.txt
src/libtime/time/: time.cpp  time.hpp
test/: CMakeLists.txt
test/libtime/: CMakeLists.txt  time.cpp
