cmake_minimum_required(VERSION 3.22)

project(
    cpp_2024
    VERSION 1.0
    LANGUAGES CXX
)

include(CTest)
enable_testing()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)

find_program(CLANG_TIDY_EXE NAMES clang-tidy-14 clang-tidy)

if(NOT CLANG_TIDY_EXE)
    message(WARNING "clang-tidy not found")
else()
    execute_process(
        COMMAND ${CLANG_TIDY_EXE} --version
        OUTPUT_VARIABLE CLANG_TIDY_VERSION)
    message("clang-tidy found:\n" ${CLANG_TIDY_VERSION})
endif()

find_program(CLANG_FORMAT_EXE NAMES clang-format clang-format-14)

if(NOT CLANG_FORMAT_EXE)
    message(WARNING "clang-format not found")
else()
    message("clang-format found: " ${CLANG_FORMAT_EXE})
endif()

add_subdirectory(external)
add_subdirectory(src)
add_subdirectory(test)
